namespace * Thrift.Service.Models.Enums


enum MessageType
{
	Information = 0,
	Warning = 1
}